--- a/002_OrderSummaryComponentMain/html&css/index.html
+++ b/002_OrderSummaryComponentMain/html&css/index.html
@@ -1,37 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel='stylesheet' href='./index.css' type='text/css' media='screen' />
+  <link rel='stylesheet' href='./mobile.css' type='text/css' media='screen and (max-width: 375px)' />
+  <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap" rel="stylesheet">
+
   <title>Frontend Mentor | Order summary card</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+    }
+
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
   </style>
 </head>
+
 <body>
+  <div class="main">
+    <div class="img">
+      <img src="../images/illustration-hero.svg" alt="Hero">
+    </div>
+    <div class="content">
 
-  Order Summary
+      <div class="title">
+        Order Summary
+      </div>
+      <div class="para">
+        You can now listen to millions of songs, audiobooks, and podcasts on any
+        device anywhere you like!
+      </div>
+      <div class="pricing">
+        <div class="icon">
+          <img src="../images/icon-music.svg" alt="Music Icon">
+        </div>
+        <div class="plan">
+          <div class="plan-title">
+            Annual Plan
+          </div>
+          <div class="plan-price">
+            $59.99/year
+          </div>
+        </div>
+        <div class="change">
+          <a href=""#>Change</a>
+        </div>
 
-  You can now listen to millions of songs, audiobooks, and podcasts on any 
-  device anywhere you like!
+      </div>
+      <div class="pay">
+        Proceed to Payment
+      </div>
 
-  Annual Plan
-  $59.99/year
+      <div class="cancel">
+        Cancel Order
+      </div>
+    </div>
 
-  Change
-
-  Proceed to Payment
-  Cancel Order
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
   </div>
+
+
 </body>
+
 </html>
