--- a/002_OrderSummaryComponentMain/html&css/index.html
+++ b/002_OrderSummaryComponentMain/html&css/index.html
@@ -8,22 +8,12 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel='stylesheet' href='./index.css' type='text/css' media='screen' />
-  <link rel='stylesheet' href='./mobile.css' type='text/css' media='screen and (max-width: 375px)' />
+  <!-- <link rel='stylesheet' href='./mobile.css' type='text/css' media='screen and (max-width: 675px)' /> -->
   <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap" rel="stylesheet">
 
   <title>Frontend Mentor | Order summary card</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution {
-      font-size: 11px;
-      text-align: center;
-    }
-
-    .attribution a {
-      color: hsl(228, 45%, 44%);
-    }
-  </style>
+  
 </head>
 
 <body>
